<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".ui.ui.SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:alpha="0.7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp"
        android:layout_above="@id/card_view">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/dermaOneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/myprimary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_in" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textStyle="bold" />

            <com.example.dermaone.ui.ui.customview.EmailEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold" />

            <com.example.dermaone.ui.ui.customview.PasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textStyle="bold" />

            <com.example.dermaone.ui.ui.customview.PasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_up"
                app:cornerRadius="32dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/myprimary"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
